--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -76,7 +76,10 @@
 									<span class="card-information rating-number">4.8 (60)</span>
 								</div>
 							</div>
-							<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat" (click)="goToChat(ride)">
+							<button (click)="goToChat(ride)">
+								<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
+							</button>
+
 						</div>
 
 						<div class="card-row paragraph-xsmall">
