--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.html
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.html
@@ -12,7 +12,7 @@
 
 	<ul>
 		@for (travel of travels; track $index) {
-		<driver-card [driver]="getTravelDriverData(travel)" (click)="redirectToReview(travel)" />
+		<driver-card [driver]="getTravelDriverData(travel)" (click)="handleDriverSelection(travel)" />
 		}
 	</ul>
 </page-layout>
