feat: add redirect to travel waiting room component

--- a/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
+++ b/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
@@ -6,7 +6,7 @@
 				<img src="assets/svgs/StartingPointGray.svg" alt="Punto de Inicio" class="icon">
 				<div class="starting-point-info">
 					<p class="paragraph-small title">Punto de partida</p>
-					<p class="paragraph-small location">UCAB</p>
+					<p class="paragraph-small location">Ucab</p>
 				</div>
 			</div>
 			<div class="external-destination">
