--- a/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
+++ b/apps/client/src/app/pages/travel-waiting-room/travel-waiting-room.component.html
@@ -45,7 +45,7 @@
 
 	<section class="driver-vehicle-information">
 		<div class="driver-information">
-			<img class="avatar" src="assets/images/DriverPhoto.png" alt="Imágen del conductor" />
+			<img class="avatar" src="{{ ride?.travel?.vehicle?.driver?.profilePicSrc }}" alt="Imágen del conductor" />
 			<p class="label-medium">{{ride?.travel?.vehicle?.driver?.firstName}}
 				{{ride?.travel?.vehicle?.driver?.lastName}}</p>
 			<button (click)="redirectToChat()">
