--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.html
@@ -1,7 +1,7 @@
 <div class="card">
 	<img class="avatar" src="{{ driver.profilePicSrc }}" alt="Imágen del conductor" />
 
-	<section>
+	<section class="card-body">
 		<div class="card-row label-medium">
 			<span class="driver-name">{{ driver.firstName }} {{ driver.lastName }}</span>
 			<div class="rating-information">
