--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.css
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.css
@@ -5,14 +5,18 @@
 	width: 100%;
 	display: flex;
 	margin-top: 1rem;
-	justify-content: center;
 	align-items: center;
 	gap: 1rem;
 }
 
+.card-body {
+	width: 100%;
+}
+
 .card-row {
 	display: flex;
-	justify-content: left;
+	width: 100%;
+	justify-content: space-between;
 	align-items: center;
 	gap: 0.6rem;
 }
