fix: add space in vehicles container in offer travel component

--- a/apps/client/src/app/pages/offer-travel/offer-travel.component.css
+++ b/apps/client/src/app/pages/offer-travel/offer-travel.component.css
@@ -86,3 +86,11 @@ h3 {
 	width: 100%;
 	gap: 1.5rem;
 }
+
+.vehicles-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: .625rem;
+}
