fix: add create travels only for womans

--- a/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
+++ b/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
@@ -1,7 +1,6 @@
 <page-layout [hasTabBar]="true">
 	<header>
 		<h1 class="heading-small">Información del viaje</h1>
-
 		@if (isWomenOnly) {
 		<div class="only-woman-info">
 			<img src="assets/svgs/SecurityShield.svg" alt="Escudo">
@@ -52,7 +51,7 @@
 		</section>
 	</body>
 
-	<button mButton size="large" (click)="handleConfirm()">Siguiente</button>
+	<button mButton size="large" (click)="handleConfirm()">Confirmar Viaje</button>
 
 
 </page-layout>
