feat: i dont know what iam doing

--- a/apps/client/src/app/pages/in-ride/in-ride.component.html
+++ b/apps/client/src/app/pages/in-ride/in-ride.component.html
@@ -6,6 +6,7 @@
 		}"></map-marker>
 	</google-map>
 	<div class="button-container">
-		<button mButton size="large" severity="danger" (click)="sendEmergencymessage()">SOS</button>
+		<button mButton size="small" severity="danger" (click)="sendEmergencymessage()"> SOS </button>
+		<button mButton size="large" severity="primary" (click)="redirectToRatingDriver()">Terminar Cola</button>
 	</div>
 </main>
