--- a/apps/client/src/app/pages/rating-driver/rating-driver.component.html
+++ b/apps/client/src/app/pages/rating-driver/rating-driver.component.html
@@ -20,7 +20,7 @@
 		</div>
 	</section>
 
-	<button mButton size="large" (click)="confirmRating()">
+	<button mButton size="large" (click)="ratingDriver()">
 		Calificar
 	</button>
 
