--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -87,13 +87,11 @@
 
 						<div class="card-row paragraph-xsmall">
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-									alt="icono de distancia a caminar">
+								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
 								<span class="card-information-title">{{ride.passenger.walkDistance}} m</span>
 							</div>
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
-									alt="icono de emparejamiento">
+								<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
 								<span class="card-information-title">70% de emparejamiento</span>
 							</div>
 						</div>
@@ -105,7 +103,7 @@
 		</section>
 
 		<div class="button-container">
-			<button mButton size="large">Iniciar Viaje</button>
+			<button mButton size="large" (click)="startTravel()">Iniciar Viaje</button>
 		</div>
 
 		<modal [(isOpen)]="isPendingRequestsModalOpen" title="Solicitudes pendientes">
@@ -137,13 +135,11 @@
 
 						<div class="card-row paragraph-xsmall">
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
-									alt="icono de distancia a caminar">
+								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
 								<span class="card-information-title">{{ride.passenger.walkDistance}} m</span>
 							</div>
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
-									alt="icono de emparejamiento">
+								<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
 								<span class="card-information-title">70% de emparejamiento</span>
 							</div>
 						</div>
