feat: add route the driver in (in travel) component

--- a/apps/client/src/app/pages/in-travel/in-travel.component.html
+++ b/apps/client/src/app/pages/in-travel/in-travel.component.html
@@ -1,6 +1,8 @@
 <main class="container">
 	<google-map height="100%" width="100%" [options]="options" [zoom]="18">
 		<!--TODO: Add InfoWindow for show the profile pic-->
+		<map-polyline [path]="vertices" />
+
 		@for (passenger of passengers; track $index) {
 		<map-marker [options]="markerOptions" [position]="passenger.destinationMarkerPosition" [options]="{
 				icon: 'https://cdn-icons-png.flaticon.com/32/684/684908.png',
