feat: add link sms app

--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -4,4 +4,11 @@
 		<input type="checkbox" [checked]="isUserRoleToggleChecked" (change)="handleUserRoleToggle($event)">
 		<span class="slider round"></span>
 	</label>
+	<div>
+		<a href="sms://012345678?&body=SUBSCRIBE NOW">
+			<button mButton size="small" severity="danger">
+				SOS
+			</button>
+		</a>
+	</div>
 </page-layout>
