fix: change number in emergency link

--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -5,7 +5,7 @@
 		<span class="slider round"></span>
 	</label>
 	<div>
-		<a href="sms://012345678?&body=SUBSCRIBE NOW">
+		<a [href]=emergencyLink>
 			<button mButton size="small" severity="danger">
 				SOS
 			</button>
