--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -6,7 +6,7 @@
 	</label>
 	<div>
 		<a [href]=emergencyLink>
-			<button mButton size="small" severity="danger">
+			<button mButton size="small" severity="success">
 				SOS
 			</button>
 		</a>
