fix: add functionality sms sos

--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -5,10 +5,7 @@
 		<span class="slider round"></span>
 	</label>
 	<div>
-		<a [href]=emergencyLink>
-			<button mButton size="small" severity="success">
-				SOS
-			</button>
-		</a>
+		<a
+			href="sms://+584125412312?&body=Este es un mensaje de emergencia el cual fué enviado bajo la aplicación MoviC"></a>
 	</div>
 </page-layout>
