--- a/apps/client/src/app/pages/in-ride/in-ride.component.html
+++ b/apps/client/src/app/pages/in-ride/in-ride.component.html
@@ -6,7 +6,7 @@
 		}"></map-marker>
 	</google-map>
 	<div class="button-container">
-		<a href="sms://012345678?&body=SUBSCRIBE NOW">
+		<a [href]="emergencyLink">
 			<button mButton size="small" severity="danger">
 				SOS
 			</button>
