--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -6,6 +6,6 @@
 	</label>
 	<div>
 		<a
-			href="sms://+584125412312?&body=Este es un mensaje de emergencia el cual fué enviado bajo la aplicación MoviC"></a>
+			href="sms://+584125412312?&body=Este es un mensaje de emergencia el cual fué enviado bajo la aplicación MoviC">LINK</a>
 	</div>
 </page-layout>
