--- a/apps/client/src/app/pages/rating-passengers/rating-passengers.component.html
+++ b/apps/client/src/app/pages/rating-passengers/rating-passengers.component.html
@@ -1,1 +1,26 @@
-<p>rating-passengers works!</p>
+<page-layout [hasTabBar]="false">
+	<header>
+		<h1 class="heading-small">Califica a los pasajeros</h1>
+	</header>
+
+	@for (ride of travel?.rides; track ride.id) {
+
+	<section class="passenger-rating-information">
+		<div class="passenger-information">
+			<img class="avatar" src="{{ ride.passenger.profilePicSrc}}" alt="Imágen del conductor" />
+			<p class="label-medium">{{ride.passenger.firstName}}
+				{{ride.passenger.lastName}}</p>
+			<div class="rating-information">
+				<img class="rating-icon" src="/assets/svgs/FullStarBlue.svg" alt="icono de rating" />
+				<span class="card-information rating-number label-small">4.8 (60)</span>
+			</div>
+		</div>
+		<rating-buttons (selectedRating)="onSelectedRating($event)"></rating-buttons>
+	</section>
+	}
+
+	<button mButton size="large" (click)="ratingPassengers()" [disabled]="!selectedRating">
+		Calificar
+	</button>
+
+</page-layout>
