--- a/apps/client/src/app/pages/rating-passengers/rating-passengers.component.css
+++ b/apps/client/src/app/pages/rating-passengers/rating-passengers.component.css
@@ -5,6 +5,7 @@ header {
 	gap: .8rem;
 	width: 100%;
 	padding-top: 3.625rem;
+	padding-bottom: 3rem;
 }
 
 header h1 {
@@ -26,11 +27,16 @@ header h1 {
 	width: 1.25rem;
 }
 
+.passengers-list {
+	display: flex;
+	flex-direction: column;
+	gap: 3.25rem;
+}
+
 .passenger-rating-information {
 	display: flex;
 	flex-direction: column;
-	padding-top: 4.8125rem;
-	padding-bottom: 4.8125rem;
+	gap: 0.6rem;
 }
 
 .passenger-information {
