fix: i hope this works

--- a/apps/client/src/app/pages/in-travel/in-travel.component.html
+++ b/apps/client/src/app/pages/in-travel/in-travel.component.html
@@ -14,6 +14,6 @@
 			<button mButton size="small" severity="danger">SOS</button>
 		</a>
 		<!--TODO: Add func for end travel-->
-		<button mButton size="large" severity="primary">Terminar viaje</button>
+		<button mButton size="large" severity="primary" (click)="redirectToRatingPassengers()">Terminar viaje</button>
 	</div>
 </main>
