fix: email in login and email verification is in lower case

--- a/apps/client/src/app/pages/auth/email-verification/email-verification.component.html
+++ b/apps/client/src/app/pages/auth/email-verification/email-verification.component.html
@@ -1,7 +1,8 @@
 <page-layout>
 	<brand-logo size="small" [style.margin-top]="'3.875rem'" />
 
-	<h1 class="heading-xsmall" [style.margin-top]="'4.5rem'">Verificación de correo electrónico</h1>
+	<h1 class="heading-xsmall" [style.margin-top]="'4.5rem'"
+		style="color: var(--primary-text-value); font-weight: bold;">Verificación de correo electrónico</h1>
 
 	<text-input inputId="email" [control]="emailControl" label="Correo electrónico"
 		placeholder="Ingrese el correo electrónico" [style.margin-top]="'2.0625rem'" />
