--- a/apps/client/src/app/pages/chat/chat.component.css
+++ b/apps/client/src/app/pages/chat/chat.component.css
@@ -1,3 +1,11 @@
+.no-style-button {
+	background: none;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
 .container-container {
 	display: flex;
 	flex-direction: column;
@@ -19,6 +27,44 @@
 	}
 }
 
+.custom-select {
+	position: absolute;
+	bottom: 100%;
+	left: 0%;
+	background-color: white;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	animation: slide-up 0.5s ease;
+
+	& .select-options {
+		display: flex;
+		flex-direction: column;
+	}
+
+	& .option {
+		font-size: 0.75rem;
+		padding: 10px;
+		cursor: pointer;
+	}
+
+	& .option:hover {
+		background-color: #f0f0f0;
+	}
+}
+
+@keyframes slide-up {
+	from {
+		opacity: 0;
+		transform: translateY(10px);
+	}
+
+	to {
+		opacity: 1;
+		transform: translateY(0);
+	}
+}
+
 .chat-date {
 	text-align: center;
 	color: #666668;
@@ -30,10 +76,17 @@
 	display: flex;
 	flex-direction: row;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
 	gap: 0.5rem;
 	padding: 0.5rem;
 	border-top: 1px solid #e0e0e0;
+
+	position: relative;
+}
+
+.input-placeholder {
+	font-size: 0.75rem;
+	color: gray;
 }
 
 .chat-heading {
