--- a/apps/client/src/app/pages/chat/chat.component.html
+++ b/apps/client/src/app/pages/chat/chat.component.html
@@ -16,7 +16,7 @@
 				</div>
 				<img src="/assets/svgs/ChatCarIcon.svg" alt="icono de tipo de usuario" class="icon-img" />
 				} @else {
-				<button (click)="redirectDriver()">
+				<button class="no-style-button" (click)="redirectDriver()">
 					<img src="/assets/svgs/ArrowLeft.svg" alt="icono de volver atras" class="icon-img" />
 				</button>
 				<div class="person-container">
@@ -25,7 +25,7 @@
 						{{rideMessages.passenger.firstName}} {{rideMessages.passenger.lastName}}
 					</div>
 				</div>
-				<img src="/assets/svgs/Walk.svg" alt="icono de tipo de usuario" class="icon-img" />
+				<img src="/assets/svgs/HandBlue.svg" alt="icono de tipo de usuario" class="icon-img" />
 				}
 			</div>
 			<div class="msgs-container">
@@ -47,10 +47,17 @@
 			}
 
 			<div class="input-container">
-				<input type="text" name="" id="" class="text-box" placeholder="Mensaje" [(ngModel)]="newMessage"
-					(keyup.enter)="sendMessage()" />
-				<img src="/assets/svgs/ChatSendMessageArrow.svg" alt="icono de enviar mensaje"
-					(click)="sendMessage()" />
+				<span class="input-placeholder" (click)="toggleSelect()">Enviar un mensaje</span>
+				<img src="/assets/svgs/BubbleChat.svg" alt="icono de enviar mensaje" (click)="toggleSelect()" />
+				<div class="custom-select" id="messageSelect">
+					@if(this.isSelectOpen){
+					<div class="select-options">
+						@for (option of selectOptions; track $index) {
+						<div class="option" (click)="sendMessage(option)">{{option}}</div>
+						}
+					</div>
+					}
+				</div>
 			</div>
 		</div>
 	</div>
