feat: add color vehicle in confirm travel

--- a/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
+++ b/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
@@ -14,7 +14,7 @@
 			<p class="label-small">Vehículo</p>
 			<div class="vehicle-card">
 				<div class="vehicle-card-image">
-					<movic-vehicle [color]="vehicle?.color!"></movic-vehicle>
+					<movic-vehicle [color]="vehicle?.color || '#fff'"></movic-vehicle>
 				</div>
 				<div class="vehicle-card-info">
 					<div class="vehicle-details">
