fix: fix styles in confirm travel component

--- a/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
+++ b/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
@@ -9,7 +9,7 @@
 		}
 	</header>
 
-	<body>
+	<section class="information-container">
 		<section class="vehicle">
 			<p class="label-small">Vehículo</p>
 			<div class="vehicle-card">
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 		</section>
-	</body>
+	</section>
 
 	<button mButton size="large" (click)="handleConfirm()">Confirmar Viaje</button>
 
