--- a/apps/client/src/app/pages/confirm-travel/confirm-travel.component.css
+++ b/apps/client/src/app/pages/confirm-travel/confirm-travel.component.css
@@ -4,7 +4,7 @@ header {
 	align-items: start;
 	gap: .8rem;
 	width: 100%;
-	padding-top: 3.625rem;
+	padding: 3.625rem 0;
 }
 
 h1 {
@@ -87,4 +87,9 @@ body {
 	height: 7.75rem;
 	border-radius: 1rem;
 	justify-content: start;
+}
+
+.information-container {
+	display: flex;
+	gap: 3.625rem;
 }
