--- a/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
+++ b/apps/client/src/app/pages/confirm-travel/confirm-travel.component.html
@@ -51,7 +51,6 @@
 		</section>
 	</section>
 
-	<button mButton size="large" (click)="handleConfirm()">Confirmar Viaje</button>
-
+	<button mButton class='confirm-button' size="large" (click)="handleConfirm()">Confirmar Viaje</button>
 
 </page-layout>
