fix: test movic-vehicle color in travel lobby component

--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -37,7 +37,7 @@
 		<section class="vehicle">
 			<div class="vehicle-card">
 				<div class="vehicle-card-image">
-					<movic-vehicle [color]="travel?.vehicle?.color!"></movic-vehicle>
+					<movic-vehicle [color]="travel?.vehicle?.color || '#fff'"></movic-vehicle>
 				</div>
 				<div class="vehicle-card-info">
 					<div class="vehicle-details">
@@ -87,11 +87,13 @@
 
 						<div class="card-row paragraph-xsmall">
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
+								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
+									alt="icono de distancia a caminar">
 								<span class="card-information-title">{{ride.passenger.walkDistance}} m</span>
 							</div>
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
+								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
+									alt="icono de emparejamiento">
 								<span class="card-information-title">70% de emparejamiento</span>
 							</div>
 						</div>
@@ -135,11 +137,13 @@
 
 						<div class="card-row paragraph-xsmall">
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg" alt="icono de distancia a caminar">
+								<img class="card-information-icon" src="/assets/svgs/WalkGrey.svg"
+									alt="icono de distancia a caminar">
 								<span class="card-information-title">{{ride.passenger.walkDistance}} m</span>
 							</div>
 							<div class="card-information">
-								<img class="card-information-icon" src="/assets/svgs/UnLink.svg" alt="icono de emparejamiento">
+								<img class="card-information-icon" src="/assets/svgs/UnLink.svg"
+									alt="icono de emparejamiento">
 								<span class="card-information-title">70% de emparejamiento</span>
 							</div>
 						</div>
