--- a/apps/client/src/app/pages/profile/profile.component.html
+++ b/apps/client/src/app/pages/profile/profile.component.html
@@ -56,21 +56,21 @@
 	<section>
 		<h4 class="paragraph-large">Mis Destinos</h4>
 		<div class="list-container">
+			@for (destination of destinations; track destination.id) {
 			<div class="chip-container">
 				<img src="assets/svgs/Destination.svg" />
-				<p class="label-small">Urb. Isla Dorada</p>
+				<p class="label-small">{{destination.name}}</p>
 			</div>
-			<div class="chip-container">
-				<img src="assets/svgs/Destination.svg" />
-				<p class="label-small">Los olivos</p>
-			</div>
+			}
 			<div>
-				<button size="small" mButton appearance="outlined" class="add-button">Añadir</button>
+				<button size="small" mButton appearance="outlined" class="add-button"
+					(click)="redirectToMyDestinations()">Añadir</button>
 			</div>
 		</div>
 	</section>
 
-	<section>
+	<!-- TODO: add fuctionality My Routes -->
+	<!-- <section>
 		<h4 class="paragraph-large">Mis Rutas</h4>
 		<div class="list-container">
 			<div class="chip-container">
@@ -85,11 +85,12 @@
 				<button size="small" mButton appearance="outlined" class="add-button">Añadir</button>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="action-buttons-container">
 		<button mButton size="large" severity="primary" (click)="logout()"> Cerrar Sesión</button>
-		<button mButton appearance="outlined" size="large"> Desactivar Cuenta</button>
+		<!-- TODO: add fuctionality to deactivate the account -->
+		<!-- <button mButton appearance="outlined" size="large"> Desactivar Cuenta</button> -->
 	</section>
 
 </page-layout>
