--- a/apps/client/src/app/pages/available-drivers/available-drivers.component.html
+++ b/apps/client/src/app/pages/available-drivers/available-drivers.component.html
@@ -4,7 +4,8 @@
 	<div class="checkbox-container">
 		@if (isAWoman()) {
 		<label class="only-woman-label">
-			<input class="only-woman-checkbox" type="checkbox" />
+			<input class="only-woman-checkbox" type="checkbox" [checked]="optionOnlyWomans"
+				(change)="changeOptionOnlyWomans($event)" />
 			Solo mujeres en el viaje
 		</label>
 		}
