fix: add validation in travel lobby component "you can't start a travel without a passenger"

--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -105,7 +105,8 @@
 		</section>
 
 		<div class="button-container">
-			<button mButton size="large" (click)="startTravel()">Iniciar Viaje</button>
+			<button mButton size="large" (click)="startTravel()">Iniciar
+				Viaje</button>
 		</div>
 
 		<modal [(isOpen)]="isPendingRequestsModalOpen" title="Solicitudes pendientes">
