--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.html
@@ -79,7 +79,7 @@
 									<span class="card-information rating-number">4.8 (60)</span>
 								</div>
 							</div>
-							<button (click)="redirectToChat(ride.id)">
+							<button class="no-style-button" (click)="redirectToChat(ride.id)">
 								<img class="chat-icon" src="/assets/svgs/Chat.svg" alt="icono de chat">
 							</button>
 
