fix: styles in travel lobby

--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -149,9 +149,10 @@ h1 {
 	border-radius: 16px;
 	padding: 0 .6rem;
 	border: 3px solid #bab3c7;
-	width: 100%;
+	width: auto;
+	max-width: 100%;
 	display: flex;
-	justify-content: center;
+	justify-content: start;
 	align-items: center;
 	gap: .6rem;
 }
@@ -161,6 +162,7 @@ h1 {
 	justify-content: left;
 	align-items: center;
 	gap: 0.6rem;
+	border: 2px solid red;
 }
 
 .card-row.justify-between {
@@ -175,6 +177,7 @@ h1 {
 }
 
 .passenger-name {
+	text-overflow: ellipsis;
 	color: var(--primary-text-value);
 }
 
@@ -234,13 +237,28 @@ h1 {
 }
 
 .action-icon {
-	font-size: 1.5rem;
+	width: 1.5rem;
 }
 
-.no-style-button {
-	background: none;
-	border: none;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
+.accept-button {
+	display: flex;
+	align-items: center;
+	color: var(--success-surface);
+}
+
+.deny-button {
+	display: flex;
+	align-items: center;
+	color: var(--error-surface);
+}
+
+.text-no-requests {
+	text-align: center;
+	color: var(--primary-text-value);
+}
+
+.actions-buttons {
+	display: flex;
+	justify-content: end;
+	gap: 1rem;
 }
