--- a/apps/client/src/app/pages/chat/chat.component.css
+++ b/apps/client/src/app/pages/chat/chat.component.css
@@ -1,11 +1,3 @@
-.no-style-button {
-	background: none;
-	border: none;
-	font: inherit;
-	cursor: pointer;
-	outline: inherit;
-}
-
 .container-container {
 	display: flex;
 	flex-direction: column;
@@ -34,7 +26,7 @@
 	background-color: white;
 	border: 1px solid #ccc;
 	border-radius: 4px;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+	box-shadow: 0 2px 10px rgb(0 0 0 / 10%);
 	animation: slide-up 0.5s ease;
 
 	& .select-options {
@@ -69,7 +61,7 @@
 	text-align: center;
 	color: #666668;
 	font-size: 0.7rem;
-	margin: 0.5rem 0 0.5rem 0;
+	margin: 0.5rem 0;
 }
 
 .input-container {
@@ -80,7 +72,6 @@
 	gap: 0.5rem;
 	padding: 0.5rem;
 	border-top: 1px solid #e0e0e0;
-
 	position: relative;
 }
 
@@ -142,7 +133,7 @@
 	max-width: 80%;
 	min-width: 35%;
 	border-radius: 0.5rem;
-	padding: 0.25rem 0.5rem 1rem 0.5rem;
+	padding: 0.25rem 0.5rem 1rem;
 	margin: 0.25rem;
 }
 
@@ -179,9 +170,9 @@
 }
 
 .own-msg-container .msg-timestamp {
-	color: rgba(255, 255, 255, 0.9);
+	color: rgb(255 255 255 0.9);
 }
 
 .msg-container .msg-timestamp {
-	color: rgba(0, 0, 0, 0.9);
+	color: rgb(0 0 0 0.9);
 }
