--- a/apps/client/src/app/shared/ui/components/modal/modal.component.css
+++ b/apps/client/src/app/shared/ui/components/modal/modal.component.css
@@ -1,5 +1,5 @@
 .container {
-	width: 20.375rem;
+	min-width: 20.375rem;
 	position: fixed;
 	top: 40%;
 	left: 50%;
@@ -59,5 +59,6 @@
 }
 
 .content {
+	width: 100%;
 	padding-top: .875rem;
 }
