--- a/apps/client/src/styles.css
+++ b/apps/client/src/styles.css
@@ -28,3 +28,11 @@
 
 	font-family: Roboto, sans-serif;
 }
+
+.no-style-button {
+	background: none;
+	border: none;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
