--- a/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.html
+++ b/apps/client/src/app/features/my-destinations/components/card-my-destination/card-my-destination.component.html
@@ -1,5 +1,5 @@
 <div class="card-destination-container">
-	<button mButton size="small" class="view-button">Ver</button>
+	<button mButton size="small" class="view-button" (click)="seeDestinationInMap()">Ver</button>
 	<img [src]="destination.photoSrc!" alt="Destination image">
 	<div class="card-destination-information">
 		<h2 class="heading-xsmall destination-name">{{destination.name}}</h2>
