--- a/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
+++ b/apps/client/src/app/pages/travel-lobby/travel-lobby.component.css
@@ -170,10 +170,11 @@ h1 {
 }
 
 .avatar {
-	width: 2.9375rem;
-	aspect-ratio: 1;
+	width: 5.5rem;
+	aspect-ratio: 1 / 1;
 	border-radius: 100%;
-	margin: 0.5rem 0;
+	object-fit: cover;
+	margin-top: 0.5rem;
 }
 
 .passenger-name {
