--- a/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.css
+++ b/apps/client/src/app/features/drivers/components/driver-card/driver-card.component.css
@@ -21,10 +21,11 @@
 }
 
 .avatar {
-	width: 2.9375rem;
-	aspect-ratio: 1;
+	width: 5.5rem;
+	aspect-ratio: 1 / 1;
 	border-radius: 100%;
-	margin: 0.5rem 0;
+	object-fit: cover;
+	margin-top: 0.5rem;
 }
 
 .driver-name {
