--- a/apps/client/src/app/pages/edit-profile/edit-profile.component.css
+++ b/apps/client/src/app/pages/edit-profile/edit-profile.component.css
@@ -41,8 +41,9 @@ header h1 {
 
 .avatar {
 	width: 5.5rem;
-	aspect-ratio: 1;
+	aspect-ratio: 1 / 1;
 	border-radius: 100%;
+	object-fit: cover;
 	margin-top: 0.5rem;
 }
 
